--- a/package.json
+++ b/package.json
@@ -3,25 +3,26 @@
   "name": "vue-example-app",
   "version": "0.0.0",
   "license": "Apache-2.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
-    "@dpc-sdp/ripple-ui-core": "2.3.0",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "@dpc-sdp/ripple-ui-core": "2.6.2",
+    "vue": "^3.4.15",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.1.0",
-    "@vue/tsconfig": "^0.4.0",
-    "start-server-and-test": "^2.0.0",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.9"
+    "@vitejs/plugin-vue": "^5.0.3",
+    "@vue/tsconfig": "^0.5.1",
+    "start-server-and-test": "^2.0.3",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12"
   },
   "engines": {
-    "node": "^18.17.0",
-    "npm": "^9.5.1"
+    "node": "^18.18.2",
+    "npm": "^9.8.1"
   }
 }
