--- a/tsconfig.vite-config.json
+++ b/tsconfig.vite-config.json
@@ -3,6 +3,7 @@
   "include": ["vite.config.*"],
   "compilerOptions": {
     "composite": true,
+    "moduleResolution": "Node16",
     "types": ["node"]
   }
 }
