--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,10 +33,15 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
+          always-auth: true
+          registry-url: 'https://npm.pkg.github.com/'
+          scope: '@dpc-sdp'
           node-version: 20
           cache: 'npm'
       - name: Install dependencies
         run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GPR_NPM_INSTALL_TOKEN}}
       - name: Build
         run: npm run build
       - name: Setup Pages
